Switch from Quarkus to Wildfly